iac/terraform/modules/events/sg.tf
resource "aws_security_group" "lambda" {
  name        = "lambda-sg"
  description = "controls access to the lambdas"
  vpc_id      = var.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = [var.events_vpc_cidr]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
